# live-de-python

./: .gitattributes  .gitignore  LICENSE  ciecle.yml  circle.yml  readme.md  testes.py
codigo/Live101/: pyproject.toml
codigo/Live101/app/: __init__.py  hello.py
codigo/Live102/: app.py  exemplo_0.py  exemplo_1.py  exemplo_2.py  exemplo_3.py  exemplo_4.py  pyproject.toml
codigo/Live140/: app.py  pyproject.toml
codigo/Live145/: exemplo_01.py  main.kv  main.py  pyproject.toml
codigo/Live154/: exemplo_07.py  exemplo_11.py  exemplo_13.py  exemplo_14.py  exemplo_16.py  exemplo_17.py  exemplo_19.py  jokempo.py  pyproject.toml
codigo/Live156/: main.py  pyproject.toml
codigo/Live159/: app.py  pyproject.toml  tasks.py
codigo/Live161/: exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  exemplo_05.py  pyproject.toml
codigo/Live164/: exemplo_04.py  exemplo_05.py  exemplo_06.py  exemplo_08.py  pyproject.toml
codigo/Live164/app/: __init__.py  dynamic.py  full_plex.py  manager.py  push.py  static.py
codigo/Live164/static/: duplex.py  dynamic.py  polling.py  push.py
codigo/Live164/templates/: base.html  duplex.html  dynamic.html  polling.html  push.html  static.html
codigo/Live166/: app.py  app2.py  db.db  pyproject.toml
codigo/Live168/: pyproject.toml
codigo/Live168/app/: __init__.py
codigo/Live168/tests/: conftest.py  test_da_coluna.py  test_do_quadro.py
codigo/Live170/: Procfile  README.md  pyproject.toml
codigo/Live170/app/: __init__.py  calc.py
codigo/Live170/tests/: test_soma.py
codigo/Live172/: cola_cmd.sh  function.py  pyproject.toml
codigo/Live172/chalice-lambdas/: app.py  requirements-dev.txt
codigo/Live172/chalice-lambdas/.chalice/: config.json
codigo/Live172/sam-live/: README.md  samconfig.toml  template.yaml
codigo/Live172/sam-live/hello_world/: app.py
codigo/Live173/: bezel_example.bzl  exemplo.c  exemplo.py  exemplo_tk.c  exemplo_tk.py  pyproject.toml
codigo/Live173/licenses/r001/: license.lic  license.lic.txt
codigo/Live173/live_bin/: meu_script.c  meu_script.py  pyoxidizer.bzl  pyproject.toml
codigo/Live173/live_bin/live_bin/: __main__.py
codigo/Live173/live_bin/live_pybins/: pyproject.toml
codigo/Live173/live_bin/myapp/: pyoxidizer.bzl
codigo/Live173/live_bin/test_pyinstaller/: myapp.py  pyproject.toml
codigo/Live173/meu_app/: pyoxidizer.bzl
codigo/Live173/pyapp/: pyoxidizer.bzl
codigo/Live174/: docker-compose.yml  exemplo_01.py  pyproject.toml
codigo/Live175/: app.py  database.json  pyproject.toml
codigo/Live177/: aa.py  exemplo_01.py  exemplo_02.py  meu_script.ui  newprojectapp.py  pyproject.toml  setup.py  tradutor.py
codigo/Live178/: pyproject.toml  schema.py  spec.yaml
codigo/Live178/tarefas_app/: main.py  models.py  package.json  test.yaml
codigo/Live180/: hot_reload.py  main.py  pyproject.toml
codigo/Live180/app/: pomodoro.kv  pomodoro.py
codigo/Live182/: c_fib.c  c_fib.h  c_fib_import.c  c_fib_import.pyx  fib_cy.py  fib_py.py  fib_x.pyx  makefile  pyproject.toml  run.py  run2.py  setup.py
codigo/Live183/: barulho.py  do_re_mi_fa.py  exemplo_01.py  introspection.py  kisme_noise.py  live_na_twich.py  pyproject.toml  sad_song.py  toda_azul.py
codigo/Live184/: Makefile  ajuda.py  entrada.txt  programa.py  pyproject.toml  saida.txt  teste.py
codigo/Live185/: exemplo_01.py  exemplo_02.py  pyproject.toml
codigo/Live185/app/: app.py  db_function.py  models.py  schema.py
codigo/Live187/: exemplo_01.py  exemplo_02.py  pyproject.toml
codigo/Live187/licenses/SO_2019/: license.lic  license.lic.txt
codigo/Live187/licenses/SO_2022/: license.lic  license.lic.txt
codigo/Live187/licenses/ipv4/: license.lic  license.lic.txt
codigo/Live187/licenses/ipv4_2/: license.lic  license.lic.txt
codigo/Live187/licenses/regcode-01/: license.lic  license.lic.txt
codigo/Live187/stages/: s0.py  s1.py  s10.py  s11.py  s12.py  s2.py  s3.py  s4.py  s5.py  s6.py  s7.py  s8.py  s9.py
codigo/Live189/: mkdocs.yml  pyproject.toml
codigo/Live189/docs/: index.md  pagina_2.md
codigo/Live189/docs/batatinhas/: batatinha_index.md
codigo/Live197/: Dockerfile  Untitled.ipynb  cola.py  csv_generator.py  dados.csv  exemplo_01.py  exemplo_02.py  exemplo_de_trace.py  exemplo_jlx.py  exemplo_jupyter.ipynb  pyproject.toml  trace_example.py
codigo/Live198/: exemplo_00.py  exemplo_handlers.py  loguru_exemplo.py  loguru_sentry.py  meu_arquivo.txt  meus_logs.txt  pyproject.toml  sentry.py
codigo/Live199/: async_aiopath.py  desafio_2.py  desafio_2b.py  exemplo_01.py  exemplo_antes.py  gerador.py  pyproject.toml
codigo/Live199/desafio_2/: arquivo_0.txt  arquivo_1.txt  arquivo_3.txt  arquivo_6.txt  arquivo_8.txt  arquivo_9.txt
codigo/Live199/files/pasta_0/: arquivo_0.txt  arquivo_2.txt  arquivo_4.txt  arquivo_5.txt  arquivo_7.txt
codigo/Live199/files/pasta_1/: arquivo_0.txt  arquivo_1.txt  arquivo_2.txt  arquivo_3.txt  arquivo_4.txt  arquivo_5.txt  arquivo_6.txt  arquivo_7.txt  arquivo_8.txt  arquivo_9.txt
codigo/Live199/files/pasta_2/: arquivo_0.txt  arquivo_1.txt  arquivo_2.txt  arquivo_3.txt  arquivo_4.txt  arquivo_5.txt  arquivo_6.txt  arquivo_7.txt  arquivo_8.txt  arquivo_9.txt
codigo/Live199/files/pasta_3/: arquivo_0.txt  arquivo_1.txt  arquivo_2.txt  arquivo_3.txt  arquivo_4.txt  arquivo_5.txt  arquivo_6.txt  arquivo_7.txt  arquivo_8.txt  arquivo_9.txt
codigo/Live199/files/pasta_4/: arquivo_0.txt  arquivo_1.txt  arquivo_2.txt  arquivo_3.txt  arquivo_4.txt  arquivo_5.txt  arquivo_6.txt  arquivo_7.txt  arquivo_8.txt  arquivo_9.txt
codigo/Live199/files/pasta_5/: arquivo_0.txt  arquivo_1.txt  arquivo_2.txt  arquivo_3.txt  arquivo_4.txt  arquivo_5.txt  arquivo_6.txt  arquivo_7.txt  arquivo_8.txt  arquivo_9.txt
codigo/Live199/files/pasta_6/: arquivo_0.txt  arquivo_1.txt  arquivo_2.txt  arquivo_3.txt  arquivo_4.txt  arquivo_5.txt  arquivo_6.txt  (+3 more)
codigo/Live201/: bytesio_case.py  exemplo_0.py  exemplo_1.py  exemplo_2.py  exemplo_3.py  exemplo_4.py  pyproject.toml
codigo/Live201/app/: __main__.py  effects.py  events.py  gui.py
codigo/Live2011/: alembic.ini  pyproject.toml  xpto.sql
(+1585 files in other folders)
