[tool.poetry]
name = "live_145"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Kivy = "^1.11.1"
ffpyplayer = "^4.3.2"
buildozer = "^1.2.0"
Cython = "0.29.19"
plyer = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
