[tool.poetry]
name = "flask_will"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
black = "^21.6b0"
isort = "^5.9.1"
pydocstyle = "^6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
