[tool.poetry]
name = "live_197"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
factory-boy = "^3.2.1"
ipdb = "^0.13.9"
rpdb = "^0.1.6"
wdb = "^3.3.0"
web-pdb = "^1.5.7"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
